Adicionando banco com models

--- a/SuperHeroes.Infra.Data/SuperHeroes.Infra.Data.csproj
+++ b/SuperHeroes.Infra.Data/SuperHeroes.Infra.Data.csproj
@@ -8,8 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.14" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.14">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.14" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SuperHeroes.Domain\SuperHeroes.Domain.csproj" />
   </ItemGroup>
 
 </Project>
