--- a/SuperHeroes.Application/SuperHeroes.Application.csproj
+++ b/SuperHeroes.Application/SuperHeroes.Application.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SuperHeroes.Domain\SuperHeroes.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ViewModels\SuperHeroes\" />
+  </ItemGroup>
+
 </Project>
